hphp/test/zend/good/ext/mbstring/tests/bug45722.php
<?php
var_dump(mb_check_encoding("&\xc2\xb7 TEST TEST TEST TEST TEST TEST", "HTML-ENTITIES"));
?>