hphp/test/zend/bad/ext/intl/tests/breakiter_createCodePointInstance_error.php
<?php
ini_set("intl.error_level", E_WARNING);

var_dump(IntlBreakIterator::createCodePointInstance(array()));